style: Add comment
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>